<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="uk.ac.napier.fitassistant.CalorieFragment">

    <TextView
        android:id="@+id/height_calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/height"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/weight_calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/height_calorie"
        android:layout_alignStart="@+id/height_calorie"
        android:layout_below="@+id/editHeight"
        android:layout_marginTop="14dp"
        android:text="@string/weight"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/height_calorie"
        android:layout_alignBottom="@+id/height_calorie"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_toEndOf="@+id/height_calorie"
        android:layout_toRightOf="@+id/height_calorie"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editHeight"
        android:layout_alignStart="@+id/editHeight"
        android:layout_below="@+id/editHeight"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editAge"
        android:layout_alignBottom="@+id/editAge"
        android:layout_alignLeft="@+id/weight_calorie"
        android:layout_alignStart="@+id/weight_calorie"
        android:text="@string/age"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editWeight"
        android:layout_alignStart="@+id/editWeight"
        android:layout_below="@+id/editWeight"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/age"
        android:layout_alignStart="@+id/age"
        android:layout_below="@+id/editAge"
        android:text="@string/activity"
        android:textSize="20sp"
        android:id="@+id/textView2" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/editAge"
        android:layout_alignStart="@+id/editAge"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:text="@string/gender"
        android:textSize="20sp" />

    <RadioButton
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gender"
        android:layout_alignLeft="@+id/spinner"
        android:layout_alignStart="@+id/spinner"
        android:text="Male" />

    <RadioButton
        android:id="@+id/radioFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/radioMale"
        android:layout_alignBottom="@+id/radioMale"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_toEndOf="@+id/radioMale"
        android:layout_toRightOf="@+id/radioMale"
        android:text="Female" />

    <TextView
        android:id="@+id/resultTDEE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gender"
        android:layout_alignStart="@+id/gender"
        android:layout_below="@+id/gender"
        android:layout_marginTop="64dp"
        android:text="@string/resultCal" />

    <TextView
        android:id="@+id/resultBMR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/resultTDEE"
        android:layout_alignLeft="@+id/resultTDEE"
        android:layout_alignStart="@+id/resultTDEE"
        android:layout_marginBottom="22dp"
        android:text="@string/resultBMR" />

    <TextView
        android:id="@+id/textGain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resultTDEE"
        android:layout_alignStart="@+id/resultTDEE"
        android:layout_below="@+id/resultTDEE"
        android:layout_marginTop="37dp"
        android:text="@string/gainWeight"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textMaintain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textGain"
        android:layout_alignStart="@+id/textGain"
        android:layout_below="@+id/textGain"
        android:layout_marginTop="21dp"
        android:text="@string/maintainWeight"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/textLose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textMaintain"
        android:layout_alignStart="@+id/textMaintain"
        android:layout_below="@+id/textMaintain"
        android:layout_marginTop="19dp"
        android:text="@string/loseWeight"
        android:textSize="15sp"/>


</RelativeLayout>
